# rustrithm

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: bitarray.rs
src/: bitarray.rs  caching.rs  lib.rs  order.rs  scanner.rs  string_proc.rs
src/collection/: bitarray.rs  coord_cmp.rs  max_queue.rs  median.rs  mod.rs  multiset.rs  removable_heap.rs
src/geometry/: affine.rs  mod.rs  vector.rs  vector_f64.rs
src/graph/: connectivity.rs  dinic.rs  disjoint_set.rs  flow.rs  grid.rs  lca.rs  mod.rs  rerooting.rs  topo.rs  util.rs
src/math/: combi.rs  combin.rs  crt.rs  divisor.rs  factor.rs  fft.rs  lagrange.rs  mod.rs  modulo.rs  num.rs  permutation.rs  prime.rs
src/math/num/: complex.rs  matrix.rs  mod.rs  modulo.rs  rational.rs
src/range_query/: dynamic_arq.rs  fenwick.rs  mod.rs  specs.rs  static_arq.rs
src/range_query/specs/: arq_max.rs  arq_min.rs  arq_min_min.rs  arq_spec.rs  arq_sum.rs  arq_supply_demand.rs  mod.rs
src/string_proc/: kmp.rs  mod.rs  suffix_array.rs  trie.rs  z_algo.rs
src/util/: coord_cmp.rs  mod.rs
tests/: codeforces343d.rs
