[package]
name = "rustrithm"
version = "0.1.0"
authors = ["kena0ki"]
edition = "2018"

description = "Common algorithms and data structures for programming contests"
repository = "https://github.com/kena0ki/rustrithm"
readme = "README.md"
keywords = ["competitive", "programming", "codeforces"]
categories = ["algorithms", "data-structures"]
license = "MIT"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bitarray"
harness = false

